// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Safe area view renders with content 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={Object {}}
  >
    <Text>
      Content
    </Text>
  </View>
</RCTSafeAreaView>
`;

exports[`Safe area view renders with custom styling 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "green",
      }
    }
  >
    <Text>
      Content
    </Text>
  </View>
</RCTSafeAreaView>
`;

exports[`Safe area view renders without content 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={Object {}}
  />
</RCTSafeAreaView>
`;
